--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -14,6 +14,12 @@ confinement: strict
 grade: stable
 base: core18
 
+architectures:
+  - build-on: i386
+  - build-on: amd64
+  - build-on: armhf
+  - build-on: arm64
+
 apps:
   tvheadend:
     command: usr/bin/tvheadend --config $SNAP_DATA
