--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -6,9 +6,28 @@ description: >
   DVB-S, DVB-S2, DVB-C, DVB-C2, DVB-T, DVB-T2, ATSC, IPTV, SAT>IP and other
   formats. It can also stream and record from HDHomeRun devices.
 
-  Once installed use your web browser to navigate to http://<IP-Address>:9981/
-  (You can use 127.0.0.1 for the IP Address if your browser and tvheadend are on
-  the same computer.)
+  Once installed use your web browser to navigate to http://<IP-Address>:9981/.
+  You can use 127.0.0.1 for the IP Address if your browser and tvheadend are
+  on the same computer. You can change the listening port and IP with
+  `snapctl set tvheadend tvh-http-port=9981` and
+  `snapctl set tvheadend tvh-ip=0.0.0.0`. You can also change the port for HTSP
+  streaming connections with `snapctl set tvheadend tvh-htsp-port=9982`
+
+  OSCam's web interface is listening on port 8888 by default. You can change
+  this by editing the file returned by `tvheadend.oscam-config`. e.g.
+  `sudo $EDITOR $(tvheadend.oscam-config)`. This is an ini-style file where the
+  web interface IP Address and Port are configured as below:
+
+  ```ini
+  [global]
+  serverip =
+
+  [webif]
+  httpport =
+  ```
+
+  See [the OSCam configuration reference](http://www.streamboard.tv/wiki/OSCam/en/Config/oscam.conf)
+  for details on the accepted options for the configuration file.
 
 confinement: strict
 grade: stable
@@ -22,13 +41,22 @@ architectures:
 
 apps:
   tvheadend:
-    command: usr/bin/tvheadend --config $SNAP_DATA
+    command: bin/tvheadend-launch
     daemon: simple
     plugs:
       - dvb
       - network
       - network-bind
       - removable-media
+
+  tvheadend-webui:
+    command: bin/tvheadend-webui
+    desktop: usr/share/applications/tvheadend.desktop
+    plugs:
+      - desktop
+
+  reset-permissions:
+    command: bin/reset-permissions
 
   oscam:
     command: usr/local/bin/oscam -c $SNAP_DATA -t $TMPDIR -u
@@ -39,7 +67,28 @@ apps:
       - network-bind
       - removable-media
 
+  oscam-webui:
+    command: bin/oscam-webui
+    desktop: usr/share/applications/oscam.desktop
+    plugs:
+      - desktop
+
+  oscam-config:
+    command: bin/get-oscam-conf
+
 parts:
+  icons:
+    plugin: dump
+    source: icons
+
+  scripts:
+    plugin: dump
+    source: scripts
+
+  desktop-files:
+    plugin: dump
+    source: desktop-files
+
   libusb:
     plugin: autotools
     source: https://github.com/libusb/libusb/releases/download/v1.0.22/libusb-1.0.22.tar.bz2
