--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -120,8 +120,12 @@ parts:
       if [ "$SNAPCRAFT_ARCH_TRIPLET" != "arm-linux-gnueabihf" ] && [ "$SNAPCRAFT_ARCH_TRIPLET" != "aarch64-linux-gnu" ]; then
         exit 0
       fi
-      git apply $SNAPCRAFT_STAGE/vc-libs-neon.patch
-      ./buildme .
+      # git apply $SNAPCRAFT_STAGE/vc-libs-neon.patch
+      if [ "$SNAPCRAFT_ARCH_TRIPLET" = "aarch64-linux-gnu" ]; then
+        ./buildme --aarch64 .
+      else
+        ./buildme .
+      fi
       mkdir -p $SNAPCRAFT_PART_INSTALL/usr
       cp -av ./build/raspberry/release/opt/vc/lib $SNAPCRAFT_PART_INSTALL/usr/
       cp -av ./build/raspberry/release/opt/vc/include $SNAPCRAFT_PART_INSTALL/usr/
@@ -152,11 +156,11 @@ parts:
       make $MAKEOPTS allyesconfig
       make $MAKEOPTS -j$SNAPCRAFT_PARALLEL_BUILD_COUNT pcsc-libusb
     build-packages:
-      - libssl-dev
       - libpcsclite-dev
+      - libssl-dev
     stage-packages:
-      - libssl1.1
       - libpcsclite1
+      - libssl1.1
 
   tvheadend:
     after: [vc4-libs]
@@ -249,6 +253,7 @@ parts:
       - libva-dev
       - libx264-dev
       - libx265-dev
+      - pngquant
       - python
       - wget
       - xmltv-util
@@ -276,6 +281,7 @@ parts:
       - libchromaprint1
       - libcodec2-0.9
       - libdatrie1
+      - libdvbcsa1
       - libfftw3-double3
       - libflite1
       - libfontconfig1
@@ -343,6 +349,7 @@ parts:
       - libxvidcore4
       - libzmq5
       - ocl-icd-libopencl1
+      - pngquant
       - xmltv-util
       - zlib1g
       - try:
