Fix missing variable build failure
Signed-off-by: Daniel Llewellyn <diddledan@ubuntu.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -184,7 +184,7 @@ parts:
         snapcraftctl set-version "$(git rev-parse --short HEAD)"
       fi
     override-build: |
-      CONFIGFLAGS="--arch=$SNAPCRAFT_ARCH \
+      CONFIGFLAGS="--arch=$SNAPCRAFT_TARGET_ARCH \
         --prefix=/snap/tvheadend/current/usr \
         --disable-ffmpeg_static
         --enable-avahi
