Add serial-port interface to oscam
Signed-off-by: Dani Llewellyn <dani@bowlhat.net>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -94,6 +94,7 @@ apps:
       - network
       - network-bind
       - removable-media
+      - serial-port
 
   oscam-webui:
     command: bin/oscam-webui
